# appimage-pkg

./: Cargo.toml
src/: cli.rs  config.rs  lib.rs  main.rs  registry.rs
src/commands/: install.rs  list.rs  remove.rs
