[package]
name = "appimage-pkg"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.49", features = ["cargo", "derive"] }
elf = "0.8.0"
rusqlite = { version = "0.39.0", features = ["bundled", "time"] }
rust-ini = "0.21.3"
serde = { version = "1.0.228", features = ["derive"] }
shellexpand = { version = "3.1.1", features = ["full"] }
slug = "0.1.6"
time = { version = "0.3.47", features = ["parsing", "formatting"] }
toml = "0.9.8"
uuid = { version = "1.18.1", features = ["v4"] }
